autopkgtest (3.19.3) UNRELEASED; urgency=medium

  * setup-commands/setup-testbed: Avoid dpkg conffile prompts.
  * adt-virt-lxc: Call lxc-stop and lxc-destroy with --quiet, to fix breakage
    due to unexpected output with LXC 2.0.
  * adt-virt-lxc: Redirect lxc-destroy stdout, to work around LP #1543016.

 -- Martin Pitt <mpitt@debian.org>  Sun, 07 Feb 2016 10:52:05 +0100

autopkgtest (3.19.2) unstable; urgency=medium

  * Fix "apt-get source" version detection:
    - Ignore source record "Binary:" entries which are not actually binaries
      of that source.
    - Take the highest source version of all encountered binaries. In other
      words, as soon as apt pinning uses one package from -proposed, use the
      tests from -proposed too.
    - Only consider binaries which exist in all releases. This avoids newly
      introduced binaries (library transitions, new kernel versions) to skew
      the intended apt pinning as they would always win the "highest version"
      check from above.
  * Install /usr/share/autopkgtest/setup-commands/* scripts as executable, to
    make them work for vmdebootstrap --customize. (Closes: #810862)
  * ssh-setup/nova: Use extended RE for matching --image pattern.
  * setup-commands/setup-testbed: Fix handling of options in sources.list.
  * tools/adt-build-lxd: Fix parsing of release name from apt sources with
    options if lsb_release is not available.
  * setup-commands/setup-testbed: Regenerate initramfs when adding udev rule
    for disabling ifnames (for chroots).
  * adt-buildvm-ubuntu-cloud: Drop duplicate sed of cloud-init.prerm.
  * adt-buildvm-ubuntu-cloud: Don't try to run "None" if --post-command is not
    given.
  * adt-virt-lxc: Add timeouts to all LXC operations.
  * Fix chowning for "rw-build-tree" restriction: run it as root if available,
    and otherwise ignore it entirely. (LP: #1535234)
  * Drop apt-cache showsrc --only-source option, as this is not yet understood
    by Ubuntu 12.04's apt.